--- a/static/css/base.css
+++ b/static/css/base.css
@@ -336,7 +336,7 @@ footer {
 }
 
 .products-bg {
-    margin-top: 158px;
+    margin-top: 170px;
     background-size: cover;
 }
 
